--- a/kaifanla.html
+++ b/kaifanla.html
@@ -9,6 +9,7 @@
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/angular-route.js"></script>
 </head>
+<h1>github测试</h1>
 <div ng-include="'tpl/include/header.html'"></div>
 <body ng-controller="parentCtrl">
 <div ng-view=""></div>
