--- a/tpl/detail.html
+++ b/tpl/detail.html
@@ -1,1 +1,27 @@
-<h1>菜品详情页</h1>
+<div class="container">
+    <ul class="breadcrumb">
+        <li><a href="#start">首页</a></li>
+        <li>详情</li>
+    </ul>
+</div>
+<div class="container">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="page-header">
+                <h2>鱼香肉丝</h2>
+                <img src="img/p0281-l.jpg" alt="" class="img-responsive">
+                <div class="text-justify">
+                    <p>原材料</p>
+                    <p>详情</p>
+                    <p>价格：￥30</p>
+                </div>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <div class="text-right">
+                <button class="btn btn-success" ng-click="jump('/order')">我要订餐</button>
+                <button class="btn btn-primary" ng-click="jump('/main')">我再看看</button>
+            </div>
+        </div>
+    </div>
+</div>
